# liveboat

./: .SRCINFO  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  PKGBUILD  README.md  build.rs  config.toml.source  snapcraft.yaml
.github/workflows/: build-image.yml  builder.yml  cross-compile.yml  deploy-crumbs.yml  deploy-templates.yml  test.yml
docker/: Dockerfile  README.md  config.toml  docker-compose.yml  liveboat.conf  rebuild.sh  start.sh  urls
liveboat/: .SRCINFO  PKGBUILD
scripts/: bundle-templates
src/: args.rs  builder.rs  cli.rs  config.rs  content.rs  controller.rs  db.rs  errors.rs  feed.rs  feed_item.rs  lib.rs  main.rs  opts.rs  paths.rs  template.rs  urls.rs  utils.rs
src/builders/: aux.rs  mod.rs  spa_builder.rs  utils.rs
src/handlers/: aux.rs  build.rs  init.rs  mod.rs  update.rs
templates/: README.md
templates/default/: index.hbs
templates/default/include/: package.json
templates/default/include/src/assets/: base.css
templates/default/include/src/components/: FeedItem.vue  FeedList.vue  FilterBox.vue
templates/default/include/src/components/icons/: IconDots.vue  IconGithub.vue  IconHeart.vue
templates/default/include/src/router/: index.js
templates/default/include/src/stores/: filters.js
templates/default/include/src/views/: FeedView.vue
templates/default/src/: config.toml  index.hbs
templates/default/src/include/: .gitignore  README.md  build_time.txt  package-lock.json  package.json  vite.config.js
templates/default/src/include/src/assets/: base.css  main.css
templates/default/src/include/src/components/: ArticleItem.vue  AudioPlayer.vue  EmbedModal.vue  FeedHeader.vue  FeedItem.vue  FeedItems.vue  FeedList.vue  FeedNavigator.vue  FilterBox.vue  IndexHeader.vue  ItemContent.vue
templates/default/src/include/src/components/icons/: IconClose.vue  IconCloseRound.vue  IconComments.vue  IconExpand.vue  IconGithub.vue  IconLiveboat.vue  IconMaximize.vue  IconMinimize.vue  IconMoon.vue  IconMovie.vue  IconMusic.vue  IconMute.vue  IconNav.vue  IconNotFound.vue  IconOPML.vue  IconPause.vue  IconPlay.vue  IconRefresh.vue  IconRss.vue  IconSearch.vue  IconSun.vue  IconTop.vue  IconUnexpand.vue  IconVolume.vue
templates/default/src/include/src/router/: index.js
templates/default/src/include/src/stores/: audio.js  embed.js  feedItems.js  feeds.js  filters.js  minimize.js  nav.js  theme.js
templates/default/src/include/src/views/: FeedView.vue  HomeView.vue  NotFoundView.vue
