[package]
name = "liveboat"
version = "0.9.6"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
rusqlite = { version="0.32.1", features=["bundled"] }

libnewsboat = { path="./sub/newsboat/rust/libnewsboat" }
toml = "0.8.19"
serde_json = "1.0.133"
chrono = "0.4.38"
bs58 = "0.5.1"
handlebars = "6.2.0"
rand = "0.8.5"
resolve-path = "0.1.0"
dialoguer = "0.11.0"
thiserror = "2.0.3"
console = "0.15.8"
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.94"
reqwest = { version = "0.12.9", features = ["blocking", "native-tls-vendored"] }
self-replace = "1.5.0"
tar = "0.4.43"
flate2 = "1.0.35"
sudo = "0.6.0"
nix = { version = "0.29.0", features = ["user"] }

[[bin]]
name = "liveboat"
path = "src/main.rs"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install sqlite3:$CROSS_DEB_ARCH"
]

[dev-dependencies]
mockall = "0.13.1"
