[package]
name = "liveboat"
version = "1.0.2"
edition = "2021"
description = "Static page generator for Newsboat feeds"
homepage = "https://github.com/exaroth/liveboat"
repository = "https://github.com/exaroth/liveboat"
readme = "README.md"
license-file = "LICENSE"
keywords = ["feeds", "rss", "atom", "generator", "newsboat", "static pages"]
categories = ["command-line", "utility", "generator"]
exclude = [".github/", "liveboat/", "scripts/", "templates/"]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
rusqlite = { version="0.32.1", features=["bundled"] }
reqwest = { version = "0.12.9", features = ["blocking", "native-tls-vendored"] }
nix = { version = "0.29.0", features = ["user"] }

libnewsboat = { version="2.37.0", git="https://github.com/newsboat/newsboat.git",  ref="1ea89e86" }

toml = "0.8.19"
serde_json = "1.0.133"
chrono = "0.4.38"
bs58 = "0.5.1"
handlebars = "6.2.0"
rand = "0.8.5"
resolve-path = "0.1.0"
dialoguer = "0.11.0"
thiserror = "2.0.3"
console = "0.15.8"
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.94"
self-replace = "1.5.0"
tar = "0.4.43"
flate2 = "1.0.35"
sudo = "0.6.0"
lazy_static = "1.5.0"

[[bin]]
name = "liveboat"
path = "src/main.rs"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install sqlite3:$CROSS_DEB_ARCH"
]

[dev-dependencies]
mockall = "0.13.1"

[package.metadata.deb]
maintainer = "Konrad Wasowicz <exaroth@gmail.com>"
copyright = "2024, Konrad Wasowicz <exaroth@gmail.com>"
extended-description = """Static page generator for Newsboat feeds"""
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
 ["target/x86_64-unknown-linux-musl/release/liveboat", "usr/bin/", "755"],
 { source = "README.md", dest = "usr/share/doc/liveboat/README", mode = "644"},
]
